--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"/",
     "dev": "quasar dev",
     "build": "quasar build",
     "build:dev": "quasar build --debug"
@@ -23,8 +24,10 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^3.0.1",
     "typescript": "^4.9.5"
   },
   "engines": {
