--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"/",
     "dev": "quasar dev",
     "build": "quasar build",
-    "build:dev": "quasar build --debug"
+    "build:dev": "quasar build --debug",
+    "prepare": "husky install && npx husky add .husky/pre-commit 'npx lint-staged --relative'"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -27,6 +28,8 @@
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
     "typescript": "^4.9.5"
   },
@@ -34,5 +37,12 @@
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,scss,html,css}": [
+      "prettier --write --config .prettierrc",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
