--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "build:dev": "quasar build --debug",
+    "test": "jest",
     "prepare": "husky install && npx husky add .husky/pre-commit 'npx lint-staged --relative'"
   },
   "dependencies": {
@@ -18,19 +19,28 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
     "@quasar/app-vite": "^1.3.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/vue3-jest": "^29.2.4",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^29.6.2",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^9.0.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
   "engines": {
