--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"/",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"",
     "dev": "quasar dev",
     "build": "quasar build",
     "build:dev": "quasar build --debug",
