fix: remove unnecessary command for lint-staged
начиная с версии 10.0 lint-stage больше не требует добавления команды git add

--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "lint-staged": {
         "*.{js,ts,vue,scss,html,css}": [
             "prettier --write --config .prettierrc",
-            "eslint --fix",
-            "git add"
+            "eslint --fix"
         ]
     }
 }
