--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.16.4",
+        "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "pinia": "^2.0.11",
         "quasar": "^2.6.0",
         "vue": "^3.0.0",
