--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "target": "es2016",
-        "module": "commonjs",
+        // "module": "commonjs",
+        "module": "es2020",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
