fix: fix lint-staged config

--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     },
     "lint-staged": {
         "*.{js,ts,vue,scss,html,css}": [
-            "prettier --write --config .prettierrc",
+            "prettier --write --config .prettierrc"
+        ],
+        "*.{js,ts,vue}": [
             "eslint --fix"
         ]
     }
