--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@quasar/extras": "^1.16.4",
         "axios": "^1.4.0",
         "dotenv": "^16.3.1",
+        "lottie-web-vue": "^2.0.7",
         "pinia": "^2.0.11",
         "quasar": "^2.6.0",
         "vue": "^3.0.0",
