--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-    "name": "food_delivery",
-    "author": "Merc Team",
-    "private": true,
-    "scripts": {
-        "lint": "eslint --ext .js,.ts,.vue ./",
-        "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"",
-        "dev": "quasar dev",
-        "build": "quasar build",
-        "build:dev": "quasar build --debug",
-        "test": "jest",
-        "prepare": "husky install && npx husky add .husky/pre-commit \"npx lint-staged --relative\""
-    },
-    "dependencies": {
-        "@quasar/extras": "^1.16.4",
-        "axios": "^1.4.0",
-        "dotenv": "^16.3.1",
-        "lottie-web-vue": "^2.0.7",
-        "pinia": "^2.0.11",
-        "quasar": "^2.6.0",
-        "vue": "^3.0.0",
-        "vue-router": "^4.0.0"
-    },
-    "devDependencies": {
-        "@babel/preset-env": "^7.22.9",
-        "@quasar/app-vite": "^1.3.0",
-        "@types/jest": "^29.5.3",
-        "@types/node": "^12.20.21",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
-        "@typescript-eslint/parser": "^5.10.0",
-        "@vue/test-utils": "^2.4.1",
-        "@vue/vue3-jest": "^29.2.4",
-        "autoprefixer": "^10.4.2",
-        "babel-jest": "^29.6.2",
-        "eslint": "^8.10.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-import": "^2.20.1",
-        "eslint-plugin-vue": "^9.0.0",
-        "husky": "^8.0.3",
-        "jest": "^29.6.2",
-        "jest-environment-jsdom": "^29.6.2",
-        "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^13.2.3",
-        "prettier": "^3.0.1",
-        "ts-jest": "^29.1.1",
-        "typescript": "^5.1.6"
-    },
-    "engines": {
-        "node": "^18 || ^16 || ^14.19",
-        "npm": ">= 6.13.4",
-        "yarn": ">= 1.21.1"
-    },
-    "lint-staged": {
-        "*.{js,ts,vue,scss,html,css}": [
-            "prettier --write --config .prettierrc"
-        ],
-        "*.{js,ts,vue}": [
-            "eslint --fix"
-        ]
-    }
+  "name": "food_delivery",
+  "author": "Merc Team",
+  "private": true,
+  "scripts": {
+    "lint": "eslint --ext .js,.ts,.vue ./",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\"",
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "build:dev": "quasar build --debug",
+    "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
+    "prepare": "husky install && npx husky add .husky/pre-commit \"npx lint-staged --relative\"",
+    "test:unit:ui": "vitest --ui",
+    "test:unit": "vitest",
+    "test:unit:ci": "vitest run"
+  },
+  "dependencies": {
+    "@quasar/extras": "^1.16.4",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "lottie-web-vue": "^2.0.7",
+    "pinia": "^2.0.11",
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
+  },
+  "devDependencies": {
+    "@quasar/app-vite": "^1.3.0",
+    "@quasar/quasar-app-extension-testing": "^2.1.1",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^2.2.3",
+    "@quasar/quasar-app-extension-testing-unit-vitest": "^0.3.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "@vitest/ui": "^0.31.0",
+    "@vue/test-utils": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-vue": "^9.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.1",
+    "typescript": "^5.1.6",
+    "vitest": "^0.31.0",
+    "vue-router-mock": "^1.0.0"
+  },
+  "engines": {
+    "node": "^18 || ^16 || ^14.19",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,scss,html,css}": [
+      "prettier --write --config .prettierrc"
+    ],
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
+  }
 }
